# lliurex-gva-hwdb

./: CMakeLists.txt  LliurexGvaHwdbConfig.cmake
debian/: changelog  control  copyright  libllxgvahwdb-dev.dirs  libllxgvahwdb-dev.install  libllxgvahwdb.install  llx-gva-hwdb.install  rules
src/: CMakeLists.txt  hwdb.h  libllxgvahwdb.c  libllxgvahwdb.h  llxgvahwdb.c
